--- a/index.html
+++ b/index.html
@@ -695,3 +695,6 @@ body { font-family: AvenirMedium; color: var(--chakra-colors-chakra-body-text); 
                 $('chsalxcome2').fadeIn();
             },1000)
         });
+	</script>
+</body>
+</html>
